--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <div id="card-grid">
     <!-- Cards will go here -->
   </div>
-
+  <script src="data.js"></script>
   <script src="script.js"></script>
 </body>
 </html>
