--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
       margin: 0;
       padding: 2rem;
     }
+
     button {
       background: #28a745;
       color: white;
@@ -22,7 +23,9 @@
       font-size: 1rem;
       border-radius: 8px;
       cursor: pointer;
+      margin-top: 1rem;
     }
+
     #battlefield {
       display: flex;
       justify-content: center;
@@ -31,15 +34,48 @@
       gap: 2rem;
       flex-wrap: wrap;
     }
+
     .card {
       background: #222;
       padding: 1rem;
       border-radius: 8px;
       width: 200px;
+      transform-style: preserve-3d;
+      animation: flip 0.6s ease;
     }
+
+    @keyframes flip {
+      from { transform: rotateY(90deg); opacity: 0; }
+      to { transform: rotateY(0deg); opacity: 1; }
+    }
+
     .card img {
       width: 100%;
       border-radius: 4px;
+    }
+
+    #result {
+      font-size: 1.5rem;
+      margin-top: 1.5rem;
+      padding: 1rem;
+      background: #333;
+      border-radius: 8px;
+      display: inline-block;
+    }
+
+    .win {
+      background: #2ecc71;
+      color: #000;
+    }
+
+    .lose {
+      background: #e74c3c;
+      color: #000;
+    }
+
+    .draw {
+      background: #f1c40f;
+      color: #000;
     }
   </style>
 </head>
