--- a/index.html
+++ b/index.html
@@ -29,10 +29,22 @@
     #battlefield {
       display: flex;
       justify-content: center;
-      align-items: center;
+      align-items: flex-start;
       margin-top: 2rem;
       gap: 2rem;
       flex-wrap: wrap;
+    }
+
+    .player-wrapper, .cpu-wrapper {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      gap: 0.5rem;
+    }
+
+    .label {
+      font-weight: bold;
+      font-size: 1.1rem;
     }
 
     .card {
@@ -40,13 +52,7 @@
       padding: 1rem;
       border-radius: 8px;
       width: 200px;
-      transform-style: preserve-3d;
-      animation: flip 0.6s ease;
-    }
-
-    @keyframes flip {
-      from { transform: rotateY(90deg); opacity: 0; }
-      to { transform: rotateY(0deg); opacity: 1; }
+      animation: flipIn 0.6s ease both;
     }
 
     .card img {
@@ -77,6 +83,17 @@
       background: #f1c40f;
       color: #000;
     }
+
+    @keyframes flipIn {
+      from {
+        opacity: 0;
+        transform: rotateY(90deg) scale(0.95);
+      }
+      to {
+        opacity: 1;
+        transform: rotateY(0deg) scale(1);
+      }
+    }
   </style>
 </head>
 <body>
@@ -84,9 +101,15 @@
   <button onclick="playGame()">Draw Card</button>
 
   <div id="battlefield">
-    <div id="player-card" class="card"></div>
+    <div class="player-wrapper">
+      <div class="label">🧍 Player</div>
+      <div id="player-card" class="card"></div>
+    </div>
     <div id="vs"><h2>VS</h2></div>
-    <div id="cpu-card" class="card"></div>
+    <div class="cpu-wrapper">
+      <div class="label">🤖 Bot</div>
+      <div id="cpu-card" class="card"></div>
+    </div>
   </div>
 
   <h2 id="result"></h2>
