--- a/index.html
+++ b/index.html
@@ -103,6 +103,8 @@
   <audio id="click-sound" src="audio/click.mp3"></audio>
   <audio id="win-sound" src="audio/win.mp3"></audio>
   <audio id="lose-sound" src="audio/lose.mp3"></audio>
+  <audio id="draw-sound" src="audio/draw.mp3"></audio>
+
 
   <button id="start-btn" onclick="startGame()">Mulai Game 🎮</button>
 
