Add 3-round mode to Sepuh TCG

--- a/index.html
+++ b/index.html
@@ -38,8 +38,12 @@
   </div>
 
   <!-- 🏆 Hasil & tombol ulang -->
+  <h2 id="round-info">Ronde: 1 / 3</h2>
   <h2 id="result"></h2>
+  <h2 id="final-score" style="display:none;"></h2>
+  <button id="next-btn" style="display:none;" onclick="nextRound()">Ronde Selanjutnya ▶️</button>
   <button id="reset-btn" style="display:none;" onclick="resetGame()">Main Lagi 🔁</button>
+  
 
   <!-- 📜 Script data dan logika -->
   <script src="data.js"></script>
