Add deck selection: pick 3 of 5 cards

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 
   <!-- 🎮 Tombol mulai game untuk trigger musik dan tampilkan deck -->
   <button id="start-btn" onclick="startGame()">Mulai Game 🎮</button>
+  <button id="confirm-deck-btn" onclick="confirmDeck()" style="display:none;">✅ Gunakan Kartu Ini</button>  
 
   <h2>Pilih Kartu:</h2>
   <div id="deck" class="card-grid"></div>
