Final full version script.js and draft animation

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
   <button id="confirm-deck-btn" onclick="confirmDeck()" style="display:none;">✅ Gunakan Kartu Ini</button>  
 
   <h2>Pilih Kartu:</h2>
+  <div id="draft-visual"></div>
   <div id="deck" class="card-grid"></div>
 
   <!-- 🧱 Arena pertarungan -->
