--- a/index.html
+++ b/index.html
@@ -8,6 +8,19 @@
   <!-- 🔗 Link ke file CSS eksternal yang sudah mengatur background PNG -->
   <link rel="stylesheet" href="style.css" />
 </head>
+<div id="loader-overlay" style="
+  position: fixed;
+  top: 0; left: 0;
+  width: 100vw; height: 100vh;
+  background: black;
+  color: white;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 1.5rem;
+  z-index: 9999;">
+  🔄 Memuat asset Sepuh TCG...
+</div>
 <body>
   <h1>🧓 Sepuh TCG – Deck Battle</h1>
 
