--- a/index.html
+++ b/index.html
@@ -9,6 +9,24 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
+  <div id="loader-overlay" style="
+  position:fixed;
+  top:0; left:0;
+  width:100vw; height:100vh;
+  background:#000;
+  color:#fff;
+  display:flex;
+  flex-direction:column;
+  align-items:center;
+  justify-content:center;
+  font-size:1.2rem;
+  z-index:9999">
+  🔄 Memuat asset Sepuh TCG...
+  <div style="margin-top:1rem;width:60%;height:20px;background:#333;border-radius:10px;overflow:hidden">
+    <div id="loader-bar" style="height:100%;width:0%;background:#4caf50;transition:width 0.3s ease"></div>
+  </div>
+  <div id="loader-percent" style="margin-top:0.5rem">0%</div>
+</div>
   <h1>🧓 Sepuh TCG – Deck Battle</h1>
 
   <!-- 🔊 Semua audio -->
@@ -49,17 +67,4 @@
   <script src="data.js"></script>
   <script src="script.js"></script>
 </body>
-<div id="loader-overlay" style="
-  position: fixed;
-  top: 0; left: 0;
-  width: 100vw; height: 100vh;
-  background: black;
-  color: white;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  font-size: 1.5rem;
-  z-index: 9999;">
-  🔄 Memuat asset Sepuh TCG...
-</div>
 </html>
