--- a/index.html
+++ b/index.html
@@ -9,23 +9,12 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <div id="loader-overlay" style="
-  position:fixed;
-  top:0; left:0;
-  width:100vw; height:100vh;
-  background:#000;
-  color:#fff;
-  display:flex;
-  flex-direction:column;
-  align-items:center;
-  justify-content:center;
-  font-size:1.2rem;
-  z-index:9999">
-  🔄 Memuat asset Sepuh TCG...
-  <div style="margin-top:1rem;width:60%;height:20px;background:#333;border-radius:10px;overflow:hidden">
-    <div id="loader-bar" style="height:100%;width:0%;background:#4caf50;transition:width 0.3s ease"></div>
+<div id="loader-overlay" style="position:fixed;top:0;left:0;width:100vw;height:100vh;background:#000;color:#fff;display:flex;flex-direction:column;align-items:center;justify-content:center;font-size:1.2rem;z-index:9999">
+  <div style="margin-bottom:1rem;">🔄 Memuat asset Sepuh TCG...</div>
+  <div style="width:200px;height:10px;background:#333;border-radius:5px;overflow:hidden">
+    <div id="loader-bar" style="width:0%;height:100%;background:#2ecc71"></div>
   </div>
-  <div id="loader-percent" style="margin-top:0.5rem">0%</div>
+  <div id="loader-percent" style="margin-top:0.5rem;">0%</div>
 </div>
   <h1>🧓 Sepuh TCG – Deck Battle</h1>
 
