add spinner loading screen

--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
 </head>
 <body>
 <div id="loader-overlay" style="position:fixed;top:0;left:0;width:100vw;height:100vh;background:#000;color:#fff;display:flex;flex-direction:column;align-items:center;justify-content:center;font-size:1.2rem;z-index:9999">
+  <div id="loader-spinner" style="display:none;flex-direction:column;align-items:center;margin-top:1rem;">
+  <div class="spinner"></div>
+  <p style="margin-top:0.5rem;color:#ccc;">💤 Internet kamu lelet kayak sepuh...</p>
+</div>
   <div style="margin-bottom:1rem;">🔄 Memuat asset Sepuh TCG...</div>
   <div style="width:200px;height:10px;background:#333;border-radius:5px;overflow:hidden">
     <div id="loader-bar" style="width:0%;height:100%;background:#2ecc71"></div>
