--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
 
   <!-- 📜 Script data dan logika -->
   <script src="data.js"></script>
+  <script src="https://cdn.socket.io/4.7.2/socket.io.min.js"></script>
   <script src="script.js"></script>
 </body>
 </html>
