--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <!-- 🔗 Link ke file CSS eksternal yang sudah mengatur background PNG -->
   <link rel="stylesheet" href="style.css" />
 </head>
+<script src="https://cdn.socket.io/4.7.2/socket.io.min.js"></script>
 <body>
 <div id="loader-overlay" style="position:fixed;top:0;left:0;width:100vw;height:100vh;background:#000;color:#fff;display:flex;flex-direction:column;align-items:center;justify-content:center;font-size:1.2rem;z-index:9999">
   <div id="loader-spinner" style="display:none;flex-direction:column;align-items:center;margin-top:1rem;">
