add multiplayer button

--- a/index.html
+++ b/index.html
@@ -30,6 +30,11 @@
   <audio id="lose-sound" src="audio/lose.mp3"></audio>
   <audio id="draw-sound" src="audio/draw.mp3"></audio>
 
+  <div id="start-screen">
+  <button id="btn-bot">Lawan Bot</button>
+  <button id="btn-multi">Multiplayer</button>
+</div>
+
   <!-- 🎮 Tombol mulai game untuk trigger musik dan tampilkan deck -->
   <button id="start-btn" onclick="startGame()">Mulai Game 🎮</button>
   <button id="confirm-deck-btn" onclick="confirmDeck()" style="display:none;">✅ Gunakan Kartu Ini</button>  
