--- a/index.html
+++ b/index.html
@@ -31,11 +31,11 @@
   <audio id="draw-sound" src="audio/draw.mp3"></audio>
 
   <!-- Menu awal -->
-  <div id="start-btns" style="display: flex; flex-direction: column; align-items: center; gap: 1rem; margin-top: 2rem;">
-  <button id="btn-vs-bot" style="padding: 1rem 2rem; font-size: 1.5rem;">🤖 Lawan Bot</button>
-  <button id="btn-multiplayer" style="padding: 1rem 2rem; font-size: 1.5rem;">🌐 Multiplayer</button>
+  <div id="start-btns" style="display: flex; flex-direction: column; gap: 1rem; align-items: center; margin-top: 40px;">
+    <button id="btn-vs-bot" style="padding: 1rem 2rem; font-size: 1.5rem;">🤖 Lawan Bot</button>
+    <button id="btn-multiplayer" style="padding: 1rem 2rem; font-size: 1.5rem;">🌐 Multiplayer</button>
   </div>
-
+  
   <!-- Draft & Deck -->
   <h2>Pilih Kartu:</h2>
   <div id="draft-visual"></div>
@@ -59,8 +59,9 @@
   <h2 id="final-score" style="display:none;"></h2>
   <button id="reset-btn" style="display:none;" onclick="resetGame()">🔁 Main Lagi</button>
 
-  <!-- Script -->
-  <script src="data.js"></script>
-  <script src="script.js"></script>
+<!-- Sebelum penutup </body> -->
+<script src="data.js"></script>
+<script src="https://cdn.socket.io/4.7.2/socket.io.min.js"></script>
+<script src="script.js"></script>
 </body>
 </html>
