fix lawan bot not working

--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
 
   <!-- Draft & Deck -->
   <h2>Pilih Kartu:</h2>
+  <div id="turn-indicator" style="text-align: center; margin: 1rem 0; padding: 1rem; border-radius: 10px; font-weight: bold; font-size: 1.2rem;"></div>
   <div id="draft-visual"></div>
   <div id="deck" class="card-grid"></div>
 
